# Effective-C-Plus-Plus

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
Boost/: CMakeLists.txt
Boost/src/: 01_create_thread.cpp
CodingInterview/: CMakeLists.txt  readme.md
CodingInterview/03_duplicationInArray/: 03_duplicationInArray.cpp
CodingInterview/04_findInPartiallySortedMatrix/: 04_findInPartiallySortedMatrix.cpp
CodingInterview/05_replaceStringSpaces/: 05_replaceStringSpaces.cpp
CodingInterview/06_ListNodeInsert_Delete_Print/: 06_DoubleListNodeInsert_Delete_Print.cpp  06_ListNodeInsert_Delete_Print.cpp
CodingInterview/51_InversePairs/: 51_InversePairs.cpp
CodingInterview/53_1_NumberOfK/: 53_1_NumberOfK.cpp
CodingInterview/53_2_MissingNumber/: 53_2_MissingNumber.cpp
CodingInterview/53_indexEqualValue/: 53_indexEqualValue.cpp
CodingInterview/54_KthNodeInBST/: 54_KthNodeInBST.cpp
CodingInterview/55_2_BalancedBinaryTree/: 55_2_BalancedBinaryTree.cpp
CodingInterview/56_1_TwoNumbersAppearOnce/: 56_1_TwoNumbersAppearOnce.cpp
CodingInterview/56_2_NumberAppearingOnce/: 56_2_NumberAppearingOnce.cpp
CodingInterview/57_1_TwoNumbersWithSum/: 57_1_TwoNumbersWithSum.cpp
CodingInterview/57_2_ContinuousSquenceWithSum/: 57_2_ContinuousSquenceWithSum.cpp
CodingInterview/58_1_ReverseWordsInSentence/: 58_1_ReverseWordsInSentence.cpp
CodingInterview/58_2_LeftRotateString/: 58_2_LeftRotateString.cpp
CodingInterview/59_1_MaxInSlidingWindow/: 59_1_MaxInSlidingWindow.cpp
CodingInterview/59_2_QueueWithMax/: 59_2_QueueWithMax.cpp
CodingInterview/60_DicesProbability/: 60_DicesProbability.cpp
CodingInterview/61_ContinousCards/: 61_ContinousCards.cpp
CodingInterview/62_LastNumberInCircle_JosephuseCircle/: 62_LastNumberInCircle_JosephuseCircle.cpp
CodingInterview/63_MaximalProfit_max_min_value/: 63_MaximalProfit_max_min_value.cpp
CodingInterview/64_fashion_accumulate/: 64_fashion_accumulate.cpp
CodingInterview/8_NextNodeInBinaryTrees/: 8_NextNodeInBinaryTrees.cpp
LeeCode/: test.cpp  (+2 more)
LeetCode/: CMakeLists.txt  readme.md  search-in-Rotated-sorted-array.cpp
LeetCode/001_twoSum/: 001_twoSum.cpp
LeetCode/104_BinTreeMaxDepth/: 104_binTreeMaxDepth.cpp
LeetCode/136_findSingleNumber/: 136_findSingleNumber.cpp
LeetCode/206_reverseList/: 206_reverseList.cpp
LeetCode/237_deleteNode/: 237_deleteNode.cpp
LeetCode/293_nimGame/: 292_nimGame.cpp
LeetCode/334_reverseString/: 334_reverseString.cpp
LeetCode/557_reverseWords/: 557_reverseWords.cpp
LeetCode/Xiecheng/: 01.cpp
LeetCode/_newDir/: 00100_.cpp
cin_input/: CMakeLists.txt  mulit_lines_int.cpp  mulit_lines_string.cpp  unfixed_lines_string.cpp
listNode_problem/: 01_isHuiWen_SingleNodeList.cpp  CMakeLists.txt  binary_tree_node_BFS_2_inorder.cpp  binary_tree_node_leastCommonAncestor.cpp  binary_tree_node_problem.cpp
new_define/: 01_twoDimMatrixMulit.cpp  01_twoDimMatrixMulit_1.cpp  02_allocationForMinCost.cpp  03_arraySubSmallest.cpp  CMakeLists.txt  primeNumberFiniteField.cpp  vector-cross-product.cpp
new_define/math/: 15_binOperation.cpp  primeNumberFiniteField.cpp  twoDimMatrixMulit.cpp  vector_angle.cpp
programming/: 00100_.cpp  CMakeLists.txt  crosswire.cpp  findNum.cpp  nonDecreasing_sequence.cpp  operationEpression_parenthesisMatching.cpp  readme.md  sqrt.cpp
programming/000_basic_Operate/: myString.cpp
programming/01_array/: 00_myDoubleNodeList.cpp  00_mySingleNodeList.cpp  00_myStack.cpp  01_arrayShiftProblem.cpp  01_arrayShiftProblem_reverse.cpp  02_removeDuplicates.cpp  03_boundingBox.cpp  04_shortestPahtInPlane.cpp  06_theLastSubArraySum.cpp  07_theLastVesselProblem.cpp  removeDuplicates.cpp
programming/02_string/: 02_findSubstringNum.cpp  04_numOfHuiwen.cpp  05_regularExpressionMatching.cpp  06_theLastSubStringLength.cpp  09_bracket_check.cpp  10_stringEvaluationReversePolishNotation.cpp  17_printaTotheMaxNum.cpp  numOfHuiwen.cpp
programming/03_treeAndGraph/: 01_Dijkstra-singleSourceShortestPath.cpp
programming/04_sorted/: 01_arrayShiftProblem_reverse.cpp
programming/06_dynamicProgramming_greedyAlgorithm/: 14_maxProductAfterCutting_greedyAlgorithm.cpp  14_maxProductAfterCutting_solution_dynamic.cpp
programming/07_backTrackingAlgorithm/: 12_stringPathInCharMatrix.cpp  13_robotMoveCountInPlane.cpp  backTrackingAlgorithm.cpp
programming/08_math/: 16_power.cpp  bigNumAdd_String.cpp  myFunction.cpp  myMath.cpp  sqrt.cpp
programming/DJI2019/: 02_theMaxSatisfication.cpp  03_dijistra_distance.cpp
programming/Huawei2019/: 02_shortestPahtInPlane.cpp  03_fruit_SliceInPlane.cpp  03_fruit_SliceInPlane_.cpp  04_symmetricString.cpp  05_Dijkstra_shortestDistance.cpp
programming/Tencent2019/: 01_splitNum.cpp
programming/Weizong2019/: bin_operate.cpp  primeNumberFiniteField.cpp
programming/Zijie2019/: bigNumAdd_Array.cpp  bigNumAdd_String.cpp  test.cpp
programming/jd2019/: 01_findSubstringNum.cpp
programming/nuimax2019/: 01_test.cpp  02_test.cpp
recursion_dynamic_programming/: 02_theLastVesselProblem.cpp  03_fruit_SliceInPlane.cpp  CMakeLists.txt  backtrack_backPackage.cpp  dp_charge_problem.cpp  dp_edit_string_distance.cpp  dp_theLasFood_Satify.cpp  dp_theLastSubArraySum.cpp  dp_theLastSubStringMatch.cpp  dp_theLastValue_Satify.cpp  dp_theLongestSubSeq_length.cpp  dp_theMaxCommonSubStringMatch.cpp  dp_theMaxVaulePath_occupiedGrid.cpp  dp_the_shortest_diff_two_sub.cpp  sequenceCollatz.cpp  sequenceJumpFloor_Fibonacci.cpp  sequence_rabbit.cpp
search_problem/: CMakeLists.txt  Dijkstra-singleSourceShortestPath.cpp  Dijkstra_shortestDistance.cpp  dijistar_distance.cpp  findNum_appearOnce.cpp  map_remove_sturents.cpp  matrix_find_neighbour_list.cpp  nonIncreasing_sequence.cpp  string_find_two_words_ShortestDist.cpp  vector_theLongest_IncreaseArray.cpp
sorted_problems/: 01_string_sort.cpp  02_unit_maxSatify.cpp  03_solveBrainTeaser.cpp  CMakeLists.txt
string_problem/: 01_String_BigendOrLittleend_Encode.cpp  01_string_caculateurs_Epression.cpp  02_string_Num_EncodeDecode.cpp  03_reverse_polish_expression.cpp  04_symmetricString.cpp  CMakeLists.txt  find_subString_iter.cpp
(+67 files in other folders)
